--- a/MyWeb/src/app/my/my.component.html
+++ b/MyWeb/src/app/my/my.component.html
@@ -1,111 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>My Website</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-    /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-    .row.content {height: 1500px}
-    
-    /* Set gray background color and 100% height */
-    .sidenav {
-      background-color: #f1f1f1;
-      height: 100%;
-    }
-    
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: #555;
-      color: white;
-      padding: 15px;
-    }
-    
-    /* On small screens, set height to 'auto' for sidenav and grid */
-    @media screen and (max-width: 767px) {
-      .sidenav {
-        height: auto;
-        padding: 15px;
-      }
-      .row.content {height: auto;} 
-    }
-  </style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="my.component.css" rel="stylesheet" type="text/css" /> 
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ek+Mukta">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<title></title>
 </head>
 <body>
-
-<div class="container-fluid" style="background-color: black; color:blanchedalmond">
-  <div class="row content">
-    <div class="col-sm-3 sidenav" style="background-color: rgb(241, 176, 132); color: black;">
-      <h4 style="font-size: 30px; font-family: 'Times New Roman', Times, serif;"><strong>Taylor Alison Swift</strong></h4>
-      <ul class="nav nav-pills nav-stacked">
-        <li class="active" style="color: black;"><a href="my.component.html">Home</a></li>
-        <li><a href="#section2" style="color: black;">Career</a></li>
-        <li><a href="#section3" style="color: black;">Awards</a></li>
-        <li><a href="#section3" style="color: black;">Photos</a></li>
-      </ul><br>
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search Information..">
-        <span class="input-group-btn">
-          <button class="btn btn-default" type="button">
-            <span class="glyphicon glyphicon-search"></span>
-          </button>
-        </span>
-      </div>
-    </div>
-
-    <div class="col-sm-9">
-        <div>
-            <h4 style="color: rgb(255, 145, 0)"><i>SUMMARY</i></h4>
-             <hr>
-             <img src = "taylor1.jpg" width="250 px" height = "180 px" style="float: right; padding: 0 0 0 10px" >
-            <p>Taylor Alison Swift (born December 13, 1989) is an American singer-songwriter. She is known for narrative songs about her personal life,
-                 which have received widespread media coverage. At age 14, Swift became the youngest artist signed by the Sony/ATV Music publishing house and,
-                  at age 15, she signed her first record deal. Her 2006 eponymous debut album was the longest-charting album of the 2000s in the US.
-                   Its third single, "Our Song", made her the youngest person to single-handedly write and perform a number-one song on the Billboard 
-                   Hot Country Songs chart. Swift's second album, Fearless, was released in 2008. Buoyed by the pop crossover success of the singles
-                    "Love Story" and "You Belong with Me", it became the US's best-selling album of 2009 and was certified diamond in the US. The album 
-                    won four Grammy Awards, and Swift became the youngest Album of the Year winner.</p>
-            <br><br>
-        </div>
-        <div>
-            <h4 style="color: rgb(255, 145, 0)"><i>ACHIEVEMENTS</i></h4>
-             <hr>
-             <img src = "taolor2.jpg" width="250 px" height = "180 px" style="float: left; padding: 0 10px 0 0" >
-             <p>
-                Swift was the sole writer of her 2010 album Speak Now, which won two Grammy Awards and was her first to debut with over a million copies
-                 sold in the first week in the US. Her fourth album, Red (2012), yielded her first Billboard Hot 100 number-one single, "We Are Never Ever
-                  Getting Back Together". For her fifth album and first all-pop project, 1989 (2014), she won three Grammy Awards, including Album of the 
-                  Year, and became the first woman to replace herself at number one on the Hot 100, with the singles "Shake It Off" and "Blank Space". Her 
-                  sixth album, Reputation (2017), made her the only act to have four consecutive albums each sell one million copies in their first week in 
-                  the US, while yielding her fifth Hot 100 number-one song, with "Look What You Made Me Do". With her seventh album, Lover (2019), she became
-                   the second woman to achieve six consecutive number-one albums on the Billboard 200.
-             </p>
-             <br><br>
-        </div>
-        <div>
-            <h4 style="color: rgb(255, 145, 0)"><i>MUSICAL STYLE</i></h4>
-             <hr>
-             <img src = "taylor3.jpg" width="250 px" height = "180 px" style="float: right; padding: 0 0 0 10px" >
-             <p>
-                Swift's music contains elements of pop, synth-pop, country, country pop, and rock. She described herself 
-                as a country artist until the 2014 release of 1989, which she characterized as a "sonically cohesive pop album". Rolling Sto
-                ne wrote: "[Swift] might get played on the country station, but she's one of the few genuine rock stars we've got these days."
-                 According to The New York Times, "There isn't much in Ms. Swift's music to indicate country—a few banjo strums, a pair of co
-                wboy boots worn onstage, a bedazzled guitar—but there's something in her winsome, vulnerable delivery that's unique to Nashvill
-                e." The Guardian wrote that Swift "cranks melodies out with the pitiless efficiency of a Scandinavian pop factory."
-             </p>
-             <br><br>
-        </div>
-    </div>
+<div style="background-color: rgb(34, 34, 34); height: 40px;clear: both;">
+  <i class="material-icons" style="float: left; padding-top: 8px; padding-left: 150px; color: rgb(51, 129, 19);">home</i>
+  <p style="padding-top: 11px; padding-right: 15px; float: left; padding-left: 2px; font-family: 'Times New Roman', Times, serif; color:white;">thanhle.16012000@gmail.com</p>
+  <p style="color:rgb(83, 80, 80); float: left; padding-top: 11px;">|</p>
+  <i class="material-icons" style="float: left; padding-top: 7px; padding-left: 15px;"><a style=" color: rgb(51, 129, 19); font-size: 20px;">phone_in_talk</a></i>
+  <p style="padding-top: 11px; padding-right: 15px; float: left; padding-left: 3px;"><a style="font-family: 'Times New Roman', Times, serif; color:white;">0367012721</a></p>
+  <a href = "https://www.instagram.com/lehuuthanh_/?hl=vi"><i class="fa fa-instagram" style="float: right; color: white; padding-right: 150px; padding-top: 11px; font-size: 20px; padding-left: 10px;"></i></a>
+  <a href = "https://twitter.com/2601Lehuuthanh"><i class="fa fa-twitter" style="float: right; color: white; padding-top: 11px; font-size: 20px; padding-left: 12px;"></i></a>
+  <a href = "https://www.facebook.com/lehuu.thanh.1829"><i class="fa fa-facebook-f" style="float: right; color: white; padding-top: 11px; font-size: 20px; padding-left: 10px;"></i></a>
+</div>
+<div style="background-image: url(n2.jpg); background-repeat: no-repeat; background-size: 100% 100%;">
+  <br><br><br>
+  <form style="color:rgb(255, 255, 251); float:right; padding-right: 100px;">
+    <h4>Hãy đề xuất đóng góp của bạn</h4>
+    Họ:<br>
+    <input style="color: rgb(34, 34, 34);" type="text" name="ho" ><br>
+    Tên:<br>
+    <input style="color: rgb(34, 34, 34);" type="text" name="ten"><br>
+    Email:<br>
+    <input style="color: rgb(34, 34, 34);" type="text" name="email"><br>
+    Số điện thoại:<br>
+    <input style="color: rgb(34, 34, 34);" type="text" name="sdt"><br>
+    Đóng góp:<br>
+    <input style="color: rgb(34, 34, 34);" type="text" name="dg"><br><br>
+    <input style="color: rgb(34, 34, 34);" type="submit" value="Send">
+  </form>
+  <div style="padding-left: 100px;">
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 30px; color:rgb(255, 255, 255); padding-right: 900px;">
+      HÃY ĐỂ CHÚNG TÔI ĐI CÙNG BẠN TRẢI NGHIỆM CUỘC SỐNG NÀY
+    </p>
+    <p style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 15px; color:rgb(255, 255, 255); padding-right: 980px; padding-left: 30px;">
+      Chào mừng bạn đến với chúng tôi. Chúng tôi là một chuyên gia cung cấp cho khách hàng những thông tin hữu ích về trải nghiệm cuộc sống.
+      Chúng tôi cung cấp cho khách hàng những hình ảnh hay những bình luận về nơi mà họ từng đi qua, những món ăn họ từng thưởng thức, đặc biệt là
+      những hoạt động mà họ từng tham gia. Ở đây là toàn bộ thông tin do khách hàng review và đóng góp ý kiến.
+    </p>
+    <br><br><br><br><br>
   </div>
 </div>
-
-<footer class="container-fluid" style="text-align: center;">
-  <p>thanhle.16012000@gmail.com</p>
-</footer>
 
 </body>
 </html>
