--- a/MyWeb/src/app/my/my.component.html
+++ b/MyWeb/src/app/my/my.component.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title></title>
 </head>
-<body>
+<body style="height: auto;">
 <div style="background-color: rgb(34, 34, 34); height: 40px;clear: both;">
   <i class="material-icons" style="float: left; padding-top: 8px; padding-left: 150px; color: rgb(51, 129, 19);">home</i>
   <p style="padding-top: 11px; padding-right: 15px; float: left; padding-left: 2px; font-family: 'Times New Roman', Times, serif; color:white;">thanhle.16012000@gmail.com</p>
@@ -21,7 +21,7 @@
   <a href = "https://www.facebook.com/lehuu.thanh.1829"><i class="fa fa-facebook-f" style="float: right; color: white; padding-top: 11px; font-size: 20px; padding-left: 10px;"></i></a>
 </div>
 <div style="background-image: url(n2.jpg); background-repeat: no-repeat; background-size: 100% 100%;">
-  <br><br><br>
+  <br><br><br><br><br><br><br><br>
   <form style="color:rgb(255, 255, 251); float:right; padding-right: 100px;">
     <h4>Hãy đề xuất đóng góp của bạn</h4>
     Họ:<br>
@@ -45,9 +45,61 @@
       Chúng tôi cung cấp cho khách hàng những hình ảnh hay những bình luận về nơi mà họ từng đi qua, những món ăn họ từng thưởng thức, đặc biệt là
       những hoạt động mà họ từng tham gia. Ở đây là toàn bộ thông tin do khách hàng review và đóng góp ý kiến.
     </p>
-    <br><br><br><br><br>
+    <br><br><br><br><br><br><br><br>
   </div>
 </div>
-
+<br><br>
+<div>
+  <p style="text-align: center; font-size: 30px; color: gray;">Về sản phẩm của chúng tôi</p>
+  <p style="text-align: center; font-size: 17px; color: gray; padding-left: 450px; padding-right: 450px;">Bạn có gì đặc biệt? Bạn cung cấp điều gì cho khách hàng? Có gì hơn đối thủ? Giá trị cốt lõi mà sản phẩm dịch vụ mang lại</p>
+  <br>
+  <div style ="text-align: center;">
+    <p style=" font-family: 'Times New Roman', Times, serif;"><b>ĐIỂM MẠNH 1</b></p>
+    <div style="border: 1px solid black; text-align: center; background-color: rgb(228, 225, 225); height: 70px; width: 70px; display: inline-block;">
+      <i class="material-icons" style="color: black; text-align: center; font-size: 40px; padding-top: 13px;">free_breakfast</i>
+    </div>
+    <br>
+    <p style="padding-top: 7px; padding-left: 400px; padding-right: 400px;">
+      Chúng tôi hiển thị cho bạn những nền ẩm thực nổi tiếng của Việt Nam qua sự trải nghiệm của tất cả mọi người</p>
+    <div style="border-radius: 10% 10% 10% 10; text-align: center; height: 50px; width: 200px; display: inline-block; box-shadow: 3px 3px rgb(221, 167, 167);text-align: center;">
+      <br><a href="#" style="text-align: center; display: inline-block;">Tìm hiểu ẩm thực ngay >
+      </a>
+    </div>
+  </div>
+  <br>
+  <div style ="text-align: center;">
+    <p style=" font-family: 'Times New Roman', Times, serif;"><b>ĐIỂM MẠNH 2</b></p>
+    <div style="border: 1px solid black; text-align: center; background-color: rgb(228, 225, 225); height: 70px; width: 70px; display: inline-block;">
+      <i class="material-icons" style="color: black; text-align: center; font-size: 40px; padding-top: 13px;">airport_shuttle</i>
+    </div>
+    <br>
+    <p style="padding-top: 7px; padding-left: 400px; padding-right: 400px;">
+      Chúng tôi hiển thị cho bạn những địa danh 'danh lam thắng cảnh' bậc nhất của Việt Nam qua trải nghiệm của mọi người</p>
+    <div style="border-radius: 10% 10% 10% 10; text-align: center; height: 50px; width: 200px; display: inline-block; box-shadow: 3px 3px rgb(221, 167, 167);text-align: center;">
+      <br><a href="#" style="text-align: center; display: inline-block;">Tìm hiểu du lịch ngay >
+      </a>
+    </div>
+  </div>
+  <br>
+  <div style ="text-align: center;">
+    <p style=" font-family: 'Times New Roman', Times, serif;"><b>ĐIỂM MẠNH 3</b></p>
+    <div style="border: 1px solid black; text-align: center; background-color: rgb(228, 225, 225); height: 70px; width: 70px; display: inline-block;">
+      <i class="material-icons" style="color: black; text-align: center; font-size: 40px; padding-top: 13px;">spa</i>
+    </div>
+    <br>
+    <p style="padding-top: 7px; padding-left: 400px; padding-right: 400px;">
+      Chúng tôi hiển thị cho bạn những văn hóa của Việt Nam qua trải nghiệm của mọi người</p>
+    <div style="border-radius: 10% 10% 10% 10; text-align: center; height: 50px; width: 200px; display: inline-block; box-shadow: 3px 3px rgb(221, 167, 167);text-align: center;">
+      <br><a href="#" style="text-align: center; display: inline-block;">Tìm hiểu văn hóa ngay >
+      </a>
+    </div>
+  </div>
+</div>
+<br>
+<div style="background-image: url(n4.jpg); background-repeat: no-repeat; background-size: 100% 100%;">
+  <div style= " filter: none;"><p style="font-size: 50px; color: rgb(255, 255, 255); padding-left: 20px;"><b>Dịch vụ đi kèm</b></p></div>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+</div>
+<br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
