--- a/MyWeb/src/app/my/my.component.html
+++ b/MyWeb/src/app/my/my.component.html
@@ -96,9 +96,33 @@
   </div>
 </div>
 <br>
-<div style="background-image: url(n4.jpg); background-repeat: no-repeat; background-size: 100% 100%;">
-  <div style= " filter: none;"><p style="font-size: 50px; color: rgb(255, 255, 255); padding-left: 20px;"><b>Dịch vụ đi kèm</b></p></div>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<div style="background-image: url(n4.jpg); background-repeat: no-repeat; background-size: 100% 100%; background-attachment: fixed;">
+  <p style="font-size: 50px; color: rgb(238, 255, 88); padding-left: 20px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"><b>Feedback</b>
+  </p>
+  <pre style="height: auto; width: 350px;">
+    Những điều bạn mang đến cho chúng tôi
+    rất thú vị và đáng được quan tâm
+  </pre>
+  <br>
+  <pre style="height: auto; width: 350px; float: right;">
+    Những ý kiến rất hay. Chúng tôi đã
+    tham khảo và cảm thấy rất tuyệt
+  </pre>
+  <br><br><br><br><br>
+  <pre style="height: auto; width: 350px; float: left;">
+    Cảm ơn vì những ý kiến rất chuẩn xác
+    Chúng tôi đã tham khảo và tin tưởng
+    Một page rất hay ...
+  </pre>
+  <br><br><br><br><br>
+  <pre style="height: auto; width: 350px; float: right;">
+    Cảm ơn những gì bạn mang lại trải
+    nghiệm của bạn sẽ là hành trang
+    cho chúng tôi.
+  </pre>
+  <br><br><br><br><br><br><br>
+  <p style="font-size: 50px; color: rgb(238, 255, 88); padding-left: 20px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"><b>Thanks all <3 </b>
+  </p>
 </div>
 <br><br><br><br><br><br><br><br><br><br><br>
 </body>
