--- a/MyWeb/src/app/my/my.component.html
+++ b/MyWeb/src/app/my/my.component.html
@@ -2,8 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link href="my.component.css" rel="stylesheet" type="text/css" /> 
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ek+Mukta">
+<link rel="stylesheet" type="text/css" href="my.component.css"> 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,6 +20,15 @@
   <a href = "https://www.facebook.com/lehuu.thanh.1829"><i class="fa fa-facebook-f" style="float: right; color: white; padding-top: 11px; font-size: 20px; padding-left: 10px;"></i></a>
 </div>
 <div style="background-image: url(n2.jpg); background-repeat: no-repeat; background-size: 100% 100%;">
+  <div>
+    <img src="logo1.png" style="float: left;" height="100px" width="200px">
+    <ul style="list-style-type: none; background-color: rgb(31, 86, 139);">
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Văn hóa</a></li>
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Du lịch</a></li>
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Ẩm thực</a></li>
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Home</a></li>
+    </ul>
+  </div>
   <br><br><br><br><br><br><br><br>
   <form style="color:rgb(255, 255, 251); float:right; padding-right: 100px;">
     <h4>Hãy đề xuất đóng góp của bạn</h4>
@@ -124,6 +132,17 @@
   <p style="font-size: 50px; color: rgb(238, 255, 88); padding-left: 20px; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif"><b>Thanks all <3 </b>
   </p>
 </div>
-<br><br><br><br><br><br><br><br><br><br><br>
+<br>
+<div style="text-align: center;">
+  <p style="text-align: center; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; font-size: 50px;">INTRODUCE MYSELF</p>
+  <img src="lht.jpg" width="300px" height="400px"><br>
+  <p style="font-size: 20px; font-style: italic;">Name: Lê Hữu Thanh<br>
+    Mm/dd/yy: 01/26/2000<br>
+    Study: University of Science<br>
+   </p>
+</div>
+<footer style="display: block; text-align: center; font-size: 15px; background-color: rgb(151, 142, 142); height: 50px; padding-top: 15px;" >
+  <p>@2020 Web All Rights Reserved</p>
+</footer>
 </body>
 </html>
