--- a/MyWeb/src/app/my/my.component.html
+++ b/MyWeb/src/app/my/my.component.html
@@ -20,18 +20,19 @@
   <a href = "https://www.facebook.com/lehuu.thanh.1829"><i class="fa fa-facebook-f" style="float: right; color: white; padding-top: 11px; font-size: 20px; padding-left: 10px;"></i></a>
 </div>
 <div style="background-image: url(n2.jpg); background-repeat: no-repeat; background-size: 100% 100%;">
-  <div>
+  <br>
+  <div id="menu">
     <img src="logo1.png" style="float: left;" height="100px" width="200px">
-    <ul style="list-style-type: none; background-color: rgb(31, 86, 139);">
-      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Văn hóa</a></li>
-      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Du lịch</a></li>
-      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Ẩm thực</a></li>
-      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: white;">Home</a></li>
+    <ul style="background-color: rgb(31, 86, 139);">
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="vhoa.html" style="color: rgb(255, 238, 0);">Văn hóa</a></li>
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: rgb(255, 238, 0);">Du lịch</a></li>
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="#" style="color: rgb(255, 238, 0);">Ẩm thực</a></li>
+      <li style="float: right; width: 120px; height: 40px; line-height: 40px;"><a href="my.component.html" style="color: rgb(255, 238, 0);">Home</a></li>
     </ul>
   </div>
-  <br><br><br><br><br><br><br><br>
-  <form style="color:rgb(255, 255, 251); float:right; padding-right: 100px;">
-    <h4>Hãy đề xuất đóng góp của bạn</h4>
+  <br><br><br><br><br><br><br>
+  <form style="color:rgb(255, 255, 251); float:right; border: 1px solid white; text-align: center; background-color: rgb(18, 22, 3);">
+    <h4 style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Hãy đóng góp ý kiến của bạn</h4>
     Họ:<br>
     <input style="color: rgb(34, 34, 34);" type="text" name="ho" ><br>
     Tên:<br>
